--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,35 @@
     <button type="submit">Submit</button>
   </form>
 
+  <div>
+    <h2>Darth Vadar invades!</h2>
+    <p>
+      Replace first Yoda's quote with a quote written by Darth Vadar
+    </p>
+    <button id="update-button">Replace Yoda's quote</button>
+  </div>
+
+  <h2> Quotes </h2>
+  
+  <ul class="quotes">
+      <!-- Loop throught the quotes in the array -->
+      <!-- This allows us to get the code from JS objects to HTML-->
+      <% for(var i = 0; i < quotes.length; i++) {%>
+        <li class="quote">
+            
+            <!-- Output name from the iterated quote object -->
+            <span> <%= quotes[i].name %> </span>:
+
+            <!-- Output quote from the iterated quote object -->
+            <span> <%= quotes[i].quote %> </span>
+
+        </li>
+        <% } %>
+
+  </ul>
+
+  <script src="/main.js"></script>
+
 </body>
 
 </html>
