--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,8 @@
       Vadar's quote
     </p>
     <button id="delete-button">Delete Darth Vadar's quote</button>
+    <div id="message"></div>
+      <!-- This allows a message to appear when there are no more Darth Vader quotes -->
   </div>
 
   <h2> Quotes </h2>
