--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,41 +4,51 @@
 <head>
   <meta charset="UTF-8">
   <title>MY APP</title>
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
 
-  <h1> May Node and Express be with you. </h1>
+  <h1 data-position="header"> May Node and Express be with you. </h1>
 
-  <form action="/quotes" method="POST">
-        <!-- the method attribute tells the browsers what kind of request to send -->
-        <!-- the action attribute tells the browser where to send the POST request. -->
-        
-    <input type="text" placeholder="name" name="name">
-    <input type="text" placeholder="quote" name="quote">
-    <button type="submit">Submit</button>
-  </form>
+  <section data-position="add-quote">
+    <h2>Add quote</h2>
 
+    <form action="/quotes" method="POST">
+      <!-- the method attribute tells the browsers what kind of request to send -->
+      <!-- the action attribute tells the browser where to send the POST request. -->
+      
+      <input type="text" placeholder="name" name="name">
+      <input type="text" placeholder="quote" name="quote">
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+<section data-position="update-quote">
   <div>
-    <h2>Darth Vadar invades!</h2>
+    <h2>Darth Vader invades!</h2>
     <p>
-      Replace first Yoda's quote with a quote written by Darth Vadar
+      Replace first Yoda's quote with a quote written by Darth Vader
     </p>
     <button id="update-button">Replace Yoda's quote</button>
   </div>
+</section>
 
+<section data-position="delete-quote"></section>
   <div>
-    <h2>Remove Darth Vadar!</h2>
+    <h2>Remove Darth Vader!</h2>
     <p>
-      Delete one Darth Vadar's quote. Does nothing if there are no more Darth
-      Vadar's quote
+      Delete one Darth Vader's quote. Does nothing if there are no more Darth
+      Vader's quote
     </p>
-    <button id="delete-button">Delete Darth Vadar's quote</button>
+    <button id="delete-button">Delete Darth Vader's quote</button>
+   </div>
     <div id="message"></div>
       <!-- This allows a message to appear when there are no more Darth Vader quotes -->
-  </div>
+</section>
 
-  <h2> Quotes </h2>
+<section data-position="quotes">
+  <h2>Quotes</h2>
   
   <ul class="quotes">
       <!-- Loop throught the quotes in the array -->
@@ -47,15 +57,16 @@
         <li class="quote">
             
             <!-- Output name from the iterated quote object -->
-            <span> <%= quotes[i].name %> </span>:
+            <span><%= quotes[i].name %></span>:
 
             <!-- Output quote from the iterated quote object -->
-            <span> <%= quotes[i].quote %> </span>
+            <span><%= quotes[i].quote %></span>
 
         </li>
         <% } %>
 
   </ul>
+  <section></section>
 
   <script src="/main.js"></script>
 
